# vst

./: README.md
.github/workflows/: release_logic_aiv.yml
AIV/AIV/resource/: editor.uidesc
AIV/AIV/source/: controller.h  entry.cpp  processor.h
AIV/AIV/source/dsp/: AutoLevel.h  Compressor.h  DeEsser.h  Gate.h  Saturation.h  StereoWidth.h
LogicAIV/: 1-INIT_RESEARCH.md  2-PROMPT_HISTORY_AFTER_INIT_RESEARCH.md  3-README_INIT_PHYSICS.md  4-README_RESEARCH_PROMPT.md  5_PHYSICS_RESEARCH.md  6_FEATURE_LIST.md  6_PROMPT.md  7_PROMPT_GALLERY.md  8_PROMPT_HISTORY.md  9_AUDIO_CROSSNORMAL_RESEARCH.md  9_AUDIO_CROSSNORMAL_RESEARCH_PROMPT.md  INSTALL.md  README.md  build_log.txt  files_to_edit.txt
LogicAIV/AIV.xcodeproj/: project.pbxproj
LogicAIV/AIV.xcodeproj/project.xcworkspace/xcuserdata/iairu.xcuserdatad/: UserInterfaceState.xcuserstate
LogicAIV/AIV.xcodeproj/xcshareddata/xcschemes/: AIV iOS.xcscheme  AIV macOS.xcscheme  AIVExtension iOS.xcscheme  AIVExtension macOS.xcscheme  AIVFramework iOS.xcscheme  AIVFramework macOS.xcscheme
LogicAIV/Shared/: AIVDemoViewController.swift  AudioUnitManager.swift
LogicAIV/Shared/AudioUnit/: AIVDemo.swift  AIVDemoParameters.swift
LogicAIV/Shared/AudioUnit/Support/: AIVDSPClasses.hpp  AIVDSPKernel.hpp  AIVDSPKernelAdapter.h  AIVDSPKernelAdapter.mm  AIVParameterAddresses.h
LogicAIV/Shared/Support/User Interface/: AIVControls.swift  AIVMainView.swift  AudioUnitViewModel.swift  RackModules.swift
LogicAIV/Shared/Support/User Interface/Modules/: DynamicsModuleView.swift  EQModuleView.swift  InputModuleView.swift  SpatialModuleView.swift
LogicAIV/iOS/AIV/: Info.plist  MainViewController.swift
LogicAIV/iOS/AIV/Base.lproj/: Main.storyboard
LogicAIV/iOS/AIVExtension/: AIVDemoViewControllerExtension.swift  Info.plist
LogicAIV/iOS/AIVExtension/Base.lproj/: MainInterface.storyboard
LogicAIV/iOS/AIVFramework/: AIVFramework.h
LogicAIV/macOS/AIV/: Info.plist  MainViewController.swift
LogicAIV/macOS/AIV/Base.lproj/: Main.storyboard
LogicAIV/macOS/AIVExtension/: AIVExtension.swift  Info.plist
LogicAIV/macOS/AIVFramework/: AIVDemoViewController.xib  AIVDemoViewControllerExtension.swift  AIVFramework.h
WIP/AIV/AIV/: CMakeLists.txt
WIP/AIV/AIV/resource/: editor.uidesc
WIP/AIV/AIV/source/: cids.h  controller.cpp  params.h  processor.cpp  version.h
WIP/AIV/AIV/source/dsp/: BreathControl.h  Delay.h  EQ.h  Pitch.h  Reverb.h
WIP/Zone/Zone/: CMakeLists.txt
WIP/Zone/Zone/source/: entry.cpp  processor.cpp  version.h
Zone/: CMakeLists.txt  README.md
Zone/Zone/resource/: editor.uidesc
Zone/Zone/source/: cids.h  controller.cpp  controller.h  processor.h
Zone/src/: Controller.cpp  Controller.h  Entry.cpp  Processor.cpp  Processor.h
Zone/vst3/sdk/: CMakeLists.txt
Zone/vst3/sdk/base/source/: fstreamer.h
Zone/vst3/sdk/pluginterfaces/base/: fbasedefs.h  fplatform.h  fstrdefs.h  funknown.h  ibstream.h  ipluginbase.h  ustring.h
Zone/vst3/sdk/pluginterfaces/gui/: iplugview.h
Zone/vst3/sdk/pluginterfaces/vst/: ivstaudioprocessor.h  ivstcomponent.h  ivsteditcontroller.h  ivstevents.h  ivstmessage.h  ivstparameterchanges.h  ivstparameters.h  vstbus.h  vsttypes.h
Zone/vst3/sdk/public.sdk/source/main/: pluginfactory.h
Zone/vst3/sdk/public.sdk/source/vst/: vstaudioeffect.h  vstcomponentbase.h  vsteditcontroller.h  vstparameters.h
